Ingress/notesdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingrass-deployment
  namespace: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: notes-app
          image: salilwadke/nodeappk8s
          ports:
            - containerPort: 8000
