Ingress/notesservice.yml
kind: Service
apiVersion: v1
metadata:
  name: ingrass-service
  namespace: nginx
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
